k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: quiz-game
  labels:
    app.kubernetes.io/name: quiz-game
    app.kubernetes.io/part-of: gravitee-quiz
